@@ -25,12 +25,12 @@ AUX glib2-CVE-2008-4316.patch 2692 RMD160 3143c4df4f1063f8177a545d8cb5678a68c298
 DIST glib-1.2.10-r1-as-needed.patch.bz2 9099 RMD160 5b7a21da6dc10112409bd885501a6976a2eb894d SHA1 468a7947b7d1688c2e7d61da80d40ca59422fbec SHA256 3bb8c45706f97b526da851061c89618bc258fa61f9100802c1340548e4bb2731
 DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 SHA1 e5a9361c594608d152d5d9650154c2e3260b87fa SHA256 6e1ce7eedae713b11db82f11434d455d8a1379f783a79812cd2e05fc024a8d9f
 DIST glib-2.18.4.tar.bz2 4809051 RMD160 c47a71708fd13ade70d72d3443799d3e74a0459d SHA1 3e21395c6980e3970d5260b46ecb6b87f2482c61 SHA256 6aeb2c845e9fdc388943acdaba2f6357e3007c5ffaa8d666904679cfb40de100
-DIST glib-2.20.2.tar.bz2 5019345 RMD160 5ab7863c97025bd5c1aa7659442aaee3020176ce SHA1 2c1f27bc4fb942ba93ccf934635879ffe0524f45 SHA256 13dea4a3f37ea927e0f2bbb312d6d1a3fb26668813604ae962e0db5a7902cedc
 DIST glib-2.20.3.tar.bz2 5008689 RMD160 75a1bede14759d3b7bc5ca320d2a094d242bc6dc SHA1 9cc9dc579f790d87dacc21413aec6600b9eccfce SHA256 37f098617c2fac11eee4c6289d576300abd0a01825d4c809462f5b698d1127b0
+DIST glib-2.20.4.tar.bz2 5035410 RMD160 e9dbefd8d0f94ead3dfddeb059eb5ee4b319fa7c SHA1 a0cee2b75bb485de926fa43b33887adc8f9c19bb SHA256 af709f0eabfbbfa5c59a02764ca1dd5e6509bbe7fb67a474b2c448bda7b06fb9
 EBUILD glib-1.2.10-r5.ebuild 1760 RMD160 0fb063af5bd480117c457cc2414b2fe4860d69af SHA1 520a0ade993bc80f188702ef8c04ab52282064fb SHA256 99c57dbca1acca07e81d9f8566c54fbf92b389b2e860774467ce8bdfb847556f
 EBUILD glib-2.18.4-r1.ebuild 4088 RMD160 726cd92c0810dfe2525f195b79d7e898d8f616d2 SHA1 fe0d7b773eb7652cd985c0f7727b61076bfafaea SHA256 42b02651cc75163e42a44e5668c96d3107b96dbdfc08234a6595c5f065c88569
 EBUILD glib-2.18.4-r2.ebuild 4283 RMD160 012547a980e62038d1b794b0f8daf6d232b4734b SHA1 258c5f700bcfebdb850381b40f0e5b0b47fb6ede SHA256 f1688137643f3433e5c8f994321423d5f28f94d5bc75b7dd3abddbc03b7200dc
-EBUILD glib-2.20.2.ebuild 3927 RMD160 6b05ff40a13996155f699c8ffe1330bedc7d2019 SHA1 98c3eb429cd8c7e8245665fd8addf9cab5047261 SHA256 424380654c54f9e3d6476079c7ad19831eff4c5c9f3f21fef2a59fdc7de5333e
 EBUILD glib-2.20.3.ebuild 4118 RMD160 185dce5bf5799dabd68411627a2ff9169be8853d SHA1 24ad4d896f2fa5b2bf304d045ec9cf18488b4d94 SHA256 5d36b2ba25b2fe42b09b60fc5daf108efd79c5101deeb64059128c7b7b013d81
-MISC ChangeLog 45767 RMD160 25c168d47ef0f0ff3db6913925590616ef83b8d7 SHA1 2f0e08b70a6c50e5527c9126e7696c6d20b47071 SHA256 a3a1336aaf078ac1b70dff65874d4560c80e260a4faed9cd432511eceb0eedc8
+EBUILD glib-2.20.4.ebuild 4118 RMD160 f146143fb1047752013ab0d228c5732d0828bbf0 SHA1 628041db7804dbbe507e3e265863221bac41b6a3 SHA256 5e87347aa44b1d5e09a8fc06f3059d959706f4fbfc6e392427781c47df39a125
+MISC ChangeLog 45945 RMD160 fef32427ce304002704a97f57fdba16f4a008c5c SHA1 08d247a18d8643909b61d4678c740dc0ba39370b SHA256 e750e843eb81105852a36f726a6b55d43ceb656fa2ba065a9f21a8ef868cba86
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
