@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.371 2009/06/08 22:00:41 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.372 2009/07/09 20:19:31 eva Exp $
+
+*glib-2.20.4 (09 Jul 2009)
+
+  09 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org> -glib-2.20.2.ebuild,
+  +glib-2.20.4.ebuild:
+  Version bump. Bug fixes and translation updates.
 
 *glib-2.20.3 (08 Jun 2009)
 
